Add live-reload + cleanup

--- a/public/stylesheets/app.scss
+++ b/public/stylesheets/app.scss
@@ -1,5 +1,8 @@
 body {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  background-color: #87CEEB;
-  color: #FFFFFF;
+  background-color: skyblue;
+}
+
+p {
+  color: white;
 }
